# engineeringteam

./: README.md  pyproject.toml
output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
src/engineeringteam/: crew.py  main.py
src/engineeringteam/config/: agents.yaml  tasks.yaml
