[project]
name = "engineeringteam"
version = "0.1.0"
description = "engineeringteam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
engineeringteam = "engineeringteam.main:run"
run_crew = "engineeringteam.main:run"
train = "engineeringteam.main:train"
replay = "engineeringteam.main:replay"
test = "engineeringteam.main:test"
run_with_trigger = "engineeringteam.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
